// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenApiSpecsView when an OpenAPI spec has a URL but no spec renders the OpenAPI spec with a URL and includes badge saying \`missing\` 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">1</span>
              OpenAPI spec
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\">
                    <div><span class=\\"badge badge-danger\\">OpenApi spec not found</span></div>
                  </td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__266\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__266__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__267\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__267_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__267_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__267_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__267_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__270\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__270__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__271\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__271_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__271_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__271_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__271_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__274\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__274__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__275\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__275_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__275_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__277\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__277__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__278\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__278_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__278_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__280\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__280__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when an OpenAPI spec has a file but no spec renders the OpenAPI spec with a file and includes badge saying \`missing\` 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">1</span>
              OpenAPI spec
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    /openapi-spec-1-1.yaml
                  </td>
                  <td class=\\"action table-secondary\\">
                    <div><span class=\\"badge badge-danger\\">OpenApi spec not found</span></div>
                  </td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__293\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__293__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__294\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__294_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__294_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__294_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__294_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__297\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__297__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__298\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__298_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__298_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__298_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__298_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__301\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__301__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__302\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__302_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__302_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__304\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__304__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__305\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__305_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__305_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__307\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__307__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when an OpenAPI spec has a spec and a URL renders the OpenAPI spec with a URL 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">1</span>
              OpenAPI spec
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__211\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__211__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__212\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__212_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__212_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__212_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__212_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__215\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__215__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__216\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__216_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__216_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__216_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__216_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__219\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__219__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__220\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__220_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__220_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__222\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__222__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__223\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__223_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__223_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__225\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__225__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when an OpenAPI spec has a spec and a file renders the OpenAPI spec with a file 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">1</span>
              OpenAPI spec
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    /openapi-spec-1-1.yaml
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__239\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__239__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__240\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__240_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__240_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__240_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__240_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__243\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__243__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__244\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__244_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__244_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__244_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__244_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__247\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__247__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__248\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__248_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__248_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__250\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__250__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__251\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__251_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__251_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__253\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__253__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components is set to multiple components with multiple OpenAPI specs renders the OpenAPI specs 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">4</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 2</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-2-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-2/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 2 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-2-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-2/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 2 2</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__127\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__127__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__128\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__128_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__128_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__128_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__128_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__128_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__128_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__128_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__128_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__133\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__133__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__134\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__134_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__134_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__134_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__134_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__134_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__134_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__134_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__134_BV_option_3\\"><span>test-tag-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__139\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__139__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__140\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__140_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__140_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__140_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__140_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__143\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__143__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__144\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__144_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__144_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__146\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__146__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components is set to multiple components with multiple OpenAPI specs when selecting a filter, the filter is applied to the OpenAPI specs in the table 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">4</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 2</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-2-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-2/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 2 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-2-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-2/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 2 2</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__178\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__178__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__179\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__179_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__179_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__179_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__179_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__184\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__184__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__185\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__185_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__185_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__185_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__185_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_3\\"><span>test-tag-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__190\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__190__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__191\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__191_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__191_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__191_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__191_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__194\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__194__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__195\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__195_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__195_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__197\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__197__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components is set to multiple components with multiple OpenAPI specs when selecting a filter, the filter is applied to the OpenAPI specs in the table 2`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">2</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 2</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__178\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__178__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__179\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__179_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__179_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__179_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__179_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__179_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__184\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__184__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__185\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__185_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__185_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__185_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__185_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__185_BV_option_3\\"><span>test-tag-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__190\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__190__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__191\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__191_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__191_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__191_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__191_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__194\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__194__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__195\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__195_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__195_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__197\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__197__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components prop is set a component with 1 OpenAPI spec renders a small count of 1 with success styling 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">1</span>
              OpenAPI spec
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__47\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__47__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__48\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__48_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__48_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__48_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__48_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__51\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__51__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__52\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__52_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__52_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__52_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__52_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__55\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__55__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__56\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__56_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__56_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__58\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__58__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__59\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__59_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__59_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__61\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__61__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components prop is set a component with 2 OpenAPI specs renders a small count of 2 with success styling 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-success\\"><span class=\\"\\">2</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <table class=\\"table table-dark\\">
              <thead>
                <tr>
                  <th class=\\"component\\">Component</th>
                  <th class=\\"teams\\">Teams</th>
                  <th class=\\"location\\">Location</th>
                  <th class=\\"action\\">Action</th>
                  <th class=\\"description\\">Description</th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-1
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/1\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 1</p>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td class=\\"component\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
                  <td class=\\"teams\\">
                    <ul>
                      <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                        <!---->
                        <!---->
                      </li>
                      <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                        <!---->
                        <!---->
                      </li>
                    </ul>
                  </td>
                  <td class=\\"location\\">
                    https://example.com/openapi-spec-1-2
                  </td>
                  <td class=\\"action table-secondary\\"><a variant=\\"primary\\" href=\\"/components/test-component-id-1/openapi-specs/2\\" target=\\"_self\\" class=\\"\\">
                      View OpenAPI spec
                    </a></td>
                  <td class=\\"description\\">
                    <div>
                      <p>Test OpenAPI Spec Description 1 2</p>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__81\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__81__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__82\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__82_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__82_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__82_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__85\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__85__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__86\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__86_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__86_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__86_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__86_BV_option_1\\"><span>test-tag-1-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__89\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__89__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__90\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__90_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__90_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__92\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__92__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__93\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__93_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__93_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__95\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__95__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components prop is set components with no OpenAPI specs renders a large count of zero with danger styling 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-danger\\"><span class=\\"display-1\\">0</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <!---->
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <div class=\\"mt-3\\">
          <!---->
          <fieldset class=\\"form-group\\" id=\\"__BVID__14\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__14__BV_label_\\">Teams</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__15\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__15_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__15_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__15_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__15_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__15_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__15_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__15_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__15_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__20\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__20__BV_label_\\">Tags</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__21\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__21_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__21_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__21_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__21_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__21_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__21_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__21_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__21_BV_option_3\\"><span>test-tag-2-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__26\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__26__BV_label_\\">Component Types</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__27\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__27_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__27_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__27_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__27_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <fieldset class=\\"form-group\\" id=\\"__BVID__30\\">
            <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__30__BV_label_\\">Platforms</legend>
            <div>
              <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__31\\">
                <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__31_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__31_BV_option_0\\"><span>undefined</span></label></div>
              </div>
              <!---->
              <!---->
              <!---->
            </div>
          </fieldset>
          <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__33\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__33__BV_label_\\">Component</label>
            <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                <option value=\\"\\">Please select a component</option>
                <option value=\\"test-component-id-1\\">test-component-id-1</option>
                <option value=\\"test-component-id-2\\">test-component-id-2</option>
              </select>
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`OpenApiSpecsView when components prop is set to an empty array renders a large count of zero with danger styling 1`] = `
"<div>
  <div class=\\"container-fluid\\">
    <div class=\\"row\\">
      <div class=\\"col\\">
        <div class=\\"card\\">
          <!---->
          <!---->
          <div class=\\"list-group\\">
            <div class=\\"list-group-item list-group-item-danger\\"><span class=\\"display-1\\">0</span>
              OpenAPI specs
            </div>
          </div>
          <!---->
          <!---->
        </div>
        <div class=\\"card my-3\\">
          <!---->
          <!---->
          <p class=\\"card-text\\">
            <!---->
          </p>
          <!---->
          <!---->
        </div>
      </div>
      <div class=\\"col-md-3\\">
        <!---->
      </div>
    </div>
  </div>
</div>"
`;
